# cyber-common

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
design-review/: DESIGN-REVIEW-2026-04-19.md
python/: pyproject.toml
python/src/cyber_common/: __init__.py  base_service.py
src/: index.ts
src/auth/: index.ts  server.ts
src/i18n/: index.ts  server.ts
src/tokens/: a11y.css  base.css
src/ui/: account-chip.tsx  button.tsx  context-switcher.tsx  flags.tsx  impersonation-banner.tsx  index.ts  language-switcher.tsx  org-switcher.tsx  permission-gate.tsx  plan-upgrade-modal.tsx  tier-badge.tsx  value-display.tsx
